--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "stop": "pkill -f 'node app.js'",
+    "stop": "pkill -f 'node app.js' || true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
